# compiler

./: .gitignore  GVN.hpp  log.txt  test
.cache/clangd/index/: ASMInstruction.hpp.85BF883F6216B873.idx  BasicBlock.cpp.47D63905F299C63B.idx  BasicBlock.hpp.B438C3330DE5A241.idx  CodeGen.cpp.BA316FA827D86676.idx  CodeGen.hpp.3876174E34DF3D87.idx  CodeGen1.cpp.FFF0DEEE9458DFF4.idx  CodeGenUtil.hpp.5F709A39D3455A20.idx  ConstProp.cpp.D54BC68ED869C9A1.idx  ConstProp.hpp.9286920D00BAEFD0.idx  Constant.cpp.0FECB2E17646F743.idx  Constant.hpp.07762A2E31F46CA4.idx  DeadCode.cpp.BC36EC33549C1C89.idx  DeadCode.hpp.9F3051552C5B8C7A.idx  Dominators.cpp.371D8CA90CA91F5E.idx  (+58 more)
include/codegen/: CodeGen.hpp  RegAlloc.hpp
include/lightir/: BasicBlock.hpp  Constant.hpp  Function.hpp  GlobalVariable.hpp  Instruction.hpp
include/passes/: ConstProp.hpp  Dominators.hpp  FunctionInline.hpp  InstCombine.hpp  LocalCommonSubExpr.hpp  LoopFind.hpp  LoopInvariant.hpp  LoopUnrolling.hpp  PassManager.hpp  StrengthReduction.hpp  UnconditionalBr.hpp
scripts/: test_asm.py  test_asm1.py  test_ir.py
src/SysY/: SysY.cpp  SysY_builder.cpp
src/codegen/: CMakeLists.txt  CodeGen.cpp  CodeGen1.cpp  RegAlloc.cpp
src/lightir/: BasicBlock.cpp  Constant.cpp  Function.cpp  IRprinter.cpp  Instruction.cpp  Module.cpp
src/passes/: CMakeLists.txt  ConstProp.cpp  DeadCode.cpp  Dominators.cpp  FuncInfo.cpp  FunctionInline.cpp  GVN.cpp  InstCombine.cpp  LocalCommonSubExpr.cpp  LoopFind.cpp  LoopInvariant.cpp  LoopUnrolling.cpp  Mem2Reg.cpp  StrengthReduction.cpp  UnconditionalBr.cpp
